@@ -7,6 +7,8 @@ octsympy 2.5.0-dev
   * Remove deprecated method for changing the Python executable using
     `sympref`: instead use the environment variable `PYTHON`.
 
+  * Deprecation notice: `evalpy` will be removed in a future release.
+
 
 
 octsympy 2.4.1-dev
